<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.gionee.autoaging18month.MainActivity">

    <Button
        android:id="@+id/main_btn_gofad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fillappdata"/>

    <Button
        android:id="@+id/main_btn_gofs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fillstorage"/>

    <Button
        android:id="@+id/main_btn_gost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_sildetest"/>

</LinearLayout>
